language/move-lang/tests/move_check/parser/function_visibility_multiple.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_visibility_multiple.move:2:19
  │
2 │     public(script script) fun f() {}
  │                   ^^^^^^
  │                   │
  │                   Unexpected 'script'
  │                   Expected ')'

